# terminal-messenger

./: .env.example  .gitignore  .pnp.cjs  README.md  deploy_package.py  package.json  pyproject.toml
imsg/: __init__.py  __main__.py  cli.py  contact_resolver.py  messages_applescript.py  messages_store.py  models.py  seen_state.py
imsg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
terminal_messenger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_store_parsing.py
tmsg/: __init__.py  __main__.py  cli.py
