[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "imsg"
version = "0.1.0"
description = "Terminal iMessage client for macOS"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Cole Striler" }
]
dependencies = []

[project.scripts]
imsg = "imsg.cli:main"
