[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-messenger"
version = "0.1.1"
description = "Terminal iMessage client for macOS"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Cole Striler" }
]
dependencies = []

[project.scripts]
tmsg = "tmsg.cli:main"

[tool.setuptools]
packages = ["imsg", "tmsg"]
