[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-messenger"
version = "0.1.2"
description = "Terminal iMessage client for macOS"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Cole Striler" }
]
dependencies = []

[project.urls]
Homepage = "https://github.com/colestriler/terminal-messenger"
Repository = "https://github.com/colestriler/terminal-messenger"
Issues = "https://github.com/colestriler/terminal-messenger/issues"

[project.scripts]
tmsg = "tmsg.cli:main"

[tool.setuptools]
packages = ["imsg", "tmsg"]
